--- a/lib/client/app/application/global/dialogs/editor.html
+++ b/lib/client/app/application/global/dialogs/editor.html
@@ -1,17 +1,23 @@
 <div class="dialog-curtain" ng-show="edit_mode == true">
     <md-card class="suite-dialog md-card-base">
 
+    <div ng-include src="'application/partials/backend-menu.html'"></div>
+
 
     <!-- Dialog Editor | Header -->
         <md-card-title layout="column" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center" style="position: relative;">
 
-            <md-button ng-show="editor_element.settings.configs.reorder_content == true" ng-class="{'raised-button': items_sortable}" class="md-fab md-mini" aria-label="Enable Draggable" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;" ng-click="items_sortable = items_sortable ? false : true">
+            <md-button ng-click="toggleSidebar()" class="md-fab md-mini" aria-label="open backend sidebar" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;">
+                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add User" md-font-library="material-icons">menu</md-icon>
+            </md-button>
+
+            <md-button ng-show="editor_element.settings.configs.reorder_content == true" ng-class="{'raised-button': items_sortable}" class="md-fab md-mini" aria-label="Enable Draggable" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;" ng-click="items_sortable = items_sortable ? false : true">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">drag_handle</md-icon>
             </md-button>
 
             <!-- Add Contnet Pages -->
             <md-menu ng-if="editor_element.settings.configs.add_content == true && editor_element.data.page.contents">
-                <md-button md-menu-origin ng-disabled="items_sortable" ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="Add Content" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;">
+                <md-button md-menu-origin ng-disabled="items_sortable" ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="Add Content" style="position: absolute; bottom: -26px; left: 128px; background-color: {{base_hue_lightest.value}}!important;">
                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">add</md-icon>
                 </md-button>
                 <md-menu-content width="4">
@@ -51,7 +57,7 @@
 
             <!-- Add Content Multiple View -->
             <md-menu ng-if="editor_element.settings.configs.add_content == true && editor_element.data.items[view].contents">
-                <md-button md-menu-origin ng-disabled="items_sortable" ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="Add Content" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;">
+                <md-button md-menu-origin ng-disabled="items_sortable" ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="Add Content" style="position: absolute; bottom: -26px; left: 128px; background-color: {{base_hue_lightest.value}}!important;">
                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">add</md-icon>
                 </md-button>
                 <md-menu-content width="4">
@@ -91,7 +97,7 @@
 
             <!-- Add Content Single View -->
             <md-menu ng-if="editor_element.settings.configs.add_content == true && editor_element.data.length > 0">
-                <md-button md-menu-origin ng-disabled="items_sortable" ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="Add Content" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;">
+                <md-button md-menu-origin ng-disabled="items_sortable" ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="Add Content" style="position: absolute; bottom: -26px; left: 128px; background-color: {{base_hue_lightest.value}}!important;">
                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">add</md-icon>
                 </md-button>
                 <md-menu-content width="4">
