--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -18,18 +18,7 @@
 
     <md-card class="suite-dialog md-card-base card inputs">
 
-        <div class="backend sidebar" ng-class="{'open': sidebarOpen, 'closed': !sidebarOpen}" layout="row" layout-align="center start" layout-wrap>
-            <span style="height:48px; width: 100%;" flex="100"></span>
-            <md-list-item class="avatar" flex="100">
-                <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer; font-size: 36px; width: 36px; height: 36px;" aria-label="Remove Task" md-font-library="material-icons">face</md-icon>
-                <span style="color: {{base_hue_darkest.value}}; font-size: 18px;">{{me.firstname}} {{me.lastname}}</span>
-            </md-list-item>
-            <md-list-item class="menu button" flex="100">
-                <md-button ng-confirm-message="Are you sure you want to sign out?" ng-confirm-click="auth.$signOut()" ng-confirm-condition="true" class="md-raised lightweight-round" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; width: 100%;">
-                <md-icon style="color: {{base_hue_lightest.value}};" aria-label="Remove Task" md-font-library="material-icons">lock_open</md-icon>&nbsp;&nbsp;&nbsp;Sign Out
-                </md-button>
-            </md-list-item>
-        </div>
+        <div ng-include src="'application/partials/backend-menu.html'"></div>
 
         <!-- =================== App Header =================== -->
         <md-card-title style="position: relative;" layout="column" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center">
