--- a/lib/client/app/application/global/dialogs/userVaultAddUser.html
+++ b/lib/client/app/application/global/dialogs/userVaultAddUser.html
@@ -13,8 +13,14 @@
 <div class="secondary-dialog-curtain userVault" ng-show="user_vault_add_user_visible == true" ng-controller="lightweightController">
 
     <md-card class="suite-dialog md-card-base card inputs">
+
+        <div ng-include src="'application/partials/backend-menu.html'"></div>
         
         <md-card-title>
+
+            <md-button ng-click="toggleSidebar()" class="md-fab md-mini" aria-label="open backend sidebar" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;">
+                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add User" md-font-library="material-icons">menu</md-icon>
+            </md-button>
 
             <md-card-title-text>
                 <span class="md-headline">Add A New User</span>
