--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -129,7 +129,7 @@
 	.projects-dropdown .md-select-value, 
 	.projects-dropdown md-select.md-default-theme .md-select-value {border-bottom-color: {{base_hue_lightest.value}}; min-width: 150px;}
 	.suite-dialog .lightweight-md-dropdown.normal md-select:not([disabled]):focus .md-select-value {border-bottom-color: rgba(0,0,0,0.12);}
-	.suite-dialog .backend.sidebar {will-change: left; transition: left .2s ease-in; border-right: 1px solid rgba(0,0,0,.15); z-index: 2}
+	.suite-dialog .backend.sidebar {will-change: left; transition: left .2s ease-in; border-right: 1px solid rgba(0,0,0,.15); z-index: 2; background-color: {{base_hue_lightest.value}};}
 	.suite-dialog .backend.sidebar .avatar {max-height: 48px;}
 	.suite-dialog .backend.sidebar .menu.button {max-height: 48px;}
 	@media screen and (min-width: 840px) {
