--- a/lib/client/app/application/global/dialogs/userVaultDetail.html
+++ b/lib/client/app/application/global/dialogs/userVaultDetail.html
@@ -39,7 +39,7 @@
 
                     <div style="width: 100%" layout="row" layout-align="center center" flex>
 
-                        <md-card class="md-whiteframe-4dp" style="background: #fafafa;" flex flex-gt-sm="40">
+                        <md-card style="background: #fafafa; border: 1px solid rgba(33,33,33,.15);" flex flex-gt-sm="40">
                             <form name="userVaultDetail">
                                 <md-card-content>
                                     <md-list-item>
