--- a/lib/client/app/application/global/dialogs/editor.html
+++ b/lib/client/app/application/global/dialogs/editor.html
@@ -5,7 +5,7 @@
 
 
     <!-- Dialog Editor | Header -->
-        <md-card-title layout="column" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center" style="position: relative;">
+        <md-card-title layout="row" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center"  layout-wrap style="position: relative;">
 
             <md-button ng-click="toggleSidebar()" class="md-fab md-mini" aria-label="open backend sidebar" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add User" md-font-library="material-icons">menu</md-icon>
