--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -4,7 +4,7 @@
 
         <div ng-include src="'application/partials/backend-menu.html'"></div>
 
-        <md-card-title style="position: relative;" layout="column" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center">
+        <md-card-title style="position: relative;" layout="row" layout-align="start center" layout-wrap layout-gt-sm="row" layout-align-gt-sm="center center">
 
 
             <!-- =================== Start Action Buttons =================== -->
