--- a/lib/client/app/application/global/dialogs/mediaVault.html
+++ b/lib/client/app/application/global/dialogs/mediaVault.html
@@ -97,7 +97,7 @@
                                                     <input ng-model="image.source">
                                                 </md-input-container>
                                             </md-list-item>
-                                            <md-list-item>
+                                            <!-- <md-list-item>
                                                 <md-input-container class="md-block lightweight-md-input" flex>
                                                     <label>Display Name</label>
                                                     <input ng-model="image.metadata.name">
@@ -108,7 +108,7 @@
                                                     <label>Description</label>
                                                     <input ng-model="image.metadata.description">
                                                 </md-input-container>
-                                            </md-list-item>                                                      
+                                            </md-list-item>  -->                                                     
                                         </md-content>
                                     </md-tab>
                                     <md-tab label="Settings" layout-padding>
