--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -12,29 +12,64 @@
             <md-button ng-click="toggleSidebar()" class="md-fab md-mini" aria-label="open backend sidebar" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add User" md-font-library="material-icons">menu</md-icon>
             </md-button>
+            
+            <!-- =================== Change Setting View =================== -->
+            <md-menu>
+                <md-button ng-click="toggleSidebar()" class="md-fab md-mini" aria-label="open backend sidebar" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;">
+                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add User" md-font-library="material-icons">more_vert</md-icon>
+                </md-button>
+                <md-menu-content width="4">
+                    <md-menu-item>
+                        <md-button ng-click="setting = 'Company Info'">
+                            Company Info
+                        </md-button>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-button ng-click="setting = 'Manage Pages'">
+                            Manage Pages
+                        </md-button>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-button ng-click="setting = 'Add Page'">
+                            Add A Page
+                        </md-button>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-button ng-click="setting = 'Edit Navigation'">
+                            Edit Navigation
+                        </md-button>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-button ng-click="setting = 'Manage Staff'">
+                            Manage Staff
+                        </md-button>
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
+            <!-- =================== Change Setting View =================== -->
 
             <!-- =================== Toggle View - Staff Settings =================== -->
-            <md-button ng-show="setting == 'Manage Staff'" class="md-fab md-mini" aria-label="Switch between grid and list view" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;" ng-click="switchViewStaff()">
+            <md-button ng-show="setting == 'Manage Staff'" class="md-fab md-mini" aria-label="Switch between grid and list view" style="position: absolute; bottom: -26px; left: 128px; background-color: {{base_hue_lightest.value}}!important;" ng-click="switchViewStaff()">
                 <md-icon ng-show="staffgridview == true" style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">view_list</md-icon>
                 <md-icon ng-show="staffgridview == false" style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">view_module</md-icon>
             </md-button>
             <!-- =================== Toggle View - Staff Settings =================== -->
 
             <!-- =================== Add Staff - Staff Settings =================== -->
-            <md-button ng-show="setting == 'Manage Staff'" ng-disabled="new_staff_member" class="md-fab md-mini" aria-label="Add a staff member" style="position: absolute; bottom: -26px; left: 128px; background-color: {{base_hue_lightest.value}}!important;" ng-click="createStaff()">
+            <md-button ng-show="setting == 'Manage Staff'" ng-disabled="new_staff_member" class="md-fab md-mini" aria-label="Add a staff member" style="position: absolute; bottom: -26px; left: 184px; background-color: {{base_hue_lightest.value}}!important;" ng-click="createStaff()">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">add</md-icon>
             </md-button>
             <!-- =================== Add Staff - Staff Settings =================== -->
 
             <!-- =================== Create A Page - Manage Pages Setting =================== -->
-            <md-button ng-show="setting == 'Manage Pages'" ng-click="setting = 'Add Page'" class="md-fab md-mini" aria-label="Add a page" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;">
+            <md-button ng-show="setting == 'Manage Pages'" ng-click="setting = 'Add Page'" class="md-fab md-mini" aria-label="Add a page" style="position: absolute; bottom: -26px; left: 128px; background-color: {{base_hue_lightest.value}}!important;">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add" md-font-library="material-icons">add</md-icon>
             </md-button>
             <!-- =================== Create A Page - Manage Pages Setting =================== -->
 
             <!-- =================== Open Manage Navigation Items Menu =================== -->
             <md-menu ng-show="setting == 'Edit Navigation'">
-                <md-button ng-disabled="manageNavigation.$invalid" md-menu-origin ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="Edit navigation" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;">
+                <md-button ng-disabled="manageNavigation.$invalid" md-menu-origin ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="Edit navigation" style="position: absolute; bottom: -26px; left: 128px; background-color: {{base_hue_lightest.value}}!important;">
                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Select Parent Navigation Item" md-font-library="material-icons">link</md-icon>
                 </md-button>
                 <md-menu-content width="4">
@@ -48,7 +83,7 @@
             <!-- =================== Open Manage Navigation Items Menu =================== -->
 
             <!-- =================== Add Navigation Items To Parent =================== -->
-            <md-button ng-show="setting == 'Edit Navigation'" class="md-fab md-mini" aria-label="Add a child navigation item" style="position: absolute; bottom: -26px; left: 128px; background-color: {{base_hue_lightest.value}}!important;" ng-click="addChildNavItem()">
+            <md-button ng-show="setting == 'Edit Navigation'" class="md-fab md-mini" aria-label="Add a child navigation item" style="position: absolute; bottom: -26px; left: 184px; background-color: {{base_hue_lightest.value}}!important;" ng-click="addChildNavItem()">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add" md-font-library="material-icons">add</md-icon>
             </md-button>
             <!-- =================== Add Navigation Items To Parent =================== -->
@@ -62,31 +97,6 @@
             <!-- =================== App Title =================== -->
 
             <span flex></span>
-
-            <!-- =================== Change Setting View =================== -->
-            <md-list-item>
-                <md-input-container class="md-block lightweight-md-dropdown">
-                    <label>Column</label>
-                    <md-select ng-model="setting">
-                        <md-option ng-value="'Company Info'">
-                            Company Info
-                        </md-option>
-                        <md-option ng-value="'Manage Pages'">
-                            Manage Pages
-                        </md-option>
-                        <md-option ng-value="'Add Page'">
-                            Add Page
-                        </md-option>
-                        <md-option ng-value="'Edit Navigation'">
-                            Edit Navigation
-                        </md-option>
-                        <md-option ng-value="'Manage Staff'">
-                            Manage Staff
-                        </md-option>
-                    </md-select>
-                </md-input-container>
-            </md-list-item>
-            <!-- =================== Change Setting View =================== -->
 
             <!-- =================== Additional App Action Buttons =================== -->
             <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you exit settings? Unsaved changes may be discarded" ng-confirm-click="close_edit_configuration()" ng-confirm-condition="true">close</md-icon>
