--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -106,7 +106,7 @@
             <md-content flex>
                 <div layout="column" layout-align="center center" flex>
                     <div layout-wrap style="width: 100%;" layout="row" layout-align="center start" flex>
-                        <md-card class="md-whiteframe-4dp" style="background: #fafafa;" flex flex-gt-sm="40">
+                        <md-card style="background: #fafafa; border: 1px solid rgba(33,33,33,.15);" flex flex-gt-sm="40">
                             <form name="myvault">
                                 <md-card-header>
                                     <md-card-header-text>
@@ -195,7 +195,7 @@
                             </form>
                         </md-card>
                         <div flex="100" flex-gt-sm="40" layout-align="row" layout-wrap>
-                            <md-card class="md-whiteframe-4dp" style="background: #fafafa;" flex="100">
+                            <md-card style="background: #fafafa; border: 1px solid rgba(33,33,33,.15);" flex="100">
                                     <md-card-header>
                                         <md-card-header-text>
                                             <span class="md-title">Files</span>
@@ -303,7 +303,7 @@
                                         </md-content>
                                     </md-card-content>
                             </md-card>
-                            <md-card class="md-whiteframe-4dp" style="background: #fafafa;" flex="100">
+                            <md-card style="background: #fafafa; border: 1px solid rgba(33,33,33,.15);" flex="100">
                                     <md-card-header>
                                         <md-card-header-text>
                                             <span class="md-title">Notifications</span>
