--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -20,27 +20,27 @@
                 </md-button>
                 <md-menu-content width="4">
                     <md-menu-item>
-                        <md-button ng-click="setting = 'Company Info'">
+                        <md-button ng-click="$parent.setting = 'Company Info'">
                             Company Info
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ng-click="setting = 'Manage Pages'">
+                        <md-button ng-click="$parent.setting = 'Manage Pages'">
                             Manage Pages
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ng-click="setting = 'Add Page'">
+                        <md-button ng-click="$parent.setting = 'Add Page'">
                             Add A Page
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ng-click="setting = 'Edit Navigation'">
+                        <md-button ng-click="$parent.setting = 'Edit Navigation'">
                             Edit Navigation
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ng-click="setting = 'Manage Staff'">
+                        <md-button ng-click="$parent.setting = 'Manage Staff'">
                             Manage Staff
                         </md-button>
                     </md-menu-item>
