--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -131,36 +131,42 @@
                                         {{me.firstname}}
                                         </span>
                                     </md-list-item>
+                                    <md-divider></md-divider>
                                     <md-list-item>
                                         <span>Lastname</span>
                                         <span class="md-secondary">
                                         {{me.lastname}}
                                         </span>
                                     </md-list-item>
+                                    <md-divider></md-divider>
                                     <md-list-item>
                                         <span>Phone</span>
                                         <span class="md-secondary">
                                         {{me.phone}}
                                         </span>
                                     </md-list-item>
+                                    <md-divider></md-divider>
                                     <md-list-item>
                                         <span>Street Address</span>
                                         <span class="md-secondary">
                                         {{me.address.street}}
                                         </span>
                                     </md-list-item>
+                                    <md-divider></md-divider>
                                     <md-list-item>
                                         <span>City</span>
                                         <span class="md-secondary">
                                         {{me.address.city}}
                                         </span>
                                     </md-list-item>
+                                    <md-divider></md-divider>
                                     <md-list-item>
                                         <span>State</span>
                                         <span class="md-secondary">
                                         {{me.address.state}}
                                         </span>
                                     </md-list-item>
+                                    <md-divider></md-divider>
                                     <md-list-item>
                                         <span>Zipcode</span>
                                         <span class="md-secondary">
@@ -333,7 +339,7 @@
             <md-content flex>
                 <div layout="column" layout-align="center center" flex>
                     <div layout-wrap style="width: 100%;" layout="row" layout-align="center start" flex>
-                        <md-card style="background: #fafafa; border: 1px solid rgba(33,33,33,.15);" flex flex-gt-sm="40">
+                        <md-card style="background: #fafafa; border: 1px solid rgba(33,33,33,.15);" flex flex-gt-sm="80">
                             <form name="myvault">
                                 <md-card-header>
                                     <md-card-header-text>
