--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -140,6 +140,13 @@
                                     </md-list-item>
                                     <md-divider></md-divider>
                                     <md-list-item>
+                                        <span>Email</span>
+                                        <span class="md-secondary">
+                                        {{me.email}}
+                                        </span>
+                                    </md-list-item>
+                                    <md-divider></md-divider>
+                                    <md-list-item>
                                         <span>Phone</span>
                                         <span class="md-secondary">
                                         {{me.phone}}
